--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -369,6 +369,8 @@
           href: copy-files-to-linux-vm-using-scp.md
         - name: Migrera till Premium Storage med Azure Site Recovery
           href: migrate-to-premium-storage-using-azure-site-recovery.md
+        - name: Hitta icke anslutna diskar
+          href: find-unattached-disks.md
         - name: Använda fillagring
           href: mount-azure-file-storage-on-linux-using-smb.md
         - name: Distribuera diskar med mall
