--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -352,6 +352,8 @@
               href: secure-access-to-data.md
     - name: Integrera
       items:
+        - name: Implementera en lambda-arkitektur med HDInsight
+          href: lambda-architecture.md
         - name: Anslut till Spark
           href: spark-connector.md
         - name: Anslut till Spark GraphX
