--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -64,6 +64,8 @@
               href: tutorial-incremental-copy-powershell.md
         - name: 5.2 – Kopiera från flera tabeller
           items:
+            - name: Användargränssnitt
+              href: tutorial-incremental-copy-multiple-tables-portal.md
             - name: Azure PowerShell
               href: tutorial-incremental-copy-multiple-tables-powershell.md
         - name: 5.3 – Använd funktionen för användningsspårning
