--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -4,6 +4,9 @@
   items:
     - name: "Översikt\r\n"
       href: apache-hadoop-introduction.md
+    - name: Hadoop-arkitektur i HDInsight
+      href: ../hdinsight-hadoop-architecture.md
+      maintainContext: true
     - name: Hadoop-komponenter på HDInsight
       href: ../hdinsight-component-versioning.md
       maintainContext: true
@@ -153,6 +156,12 @@
           maintainContext: true
         - name: Avancerade analyser för HDInsight
           href: apache-hadoop-deep-dive-advanced-analytics.md
+        - name: Maskininlärning i HDInsight
+          href: ../hdinsight-machine-learning-overview.md
+          maintainContext: true
+        - name: Direktuppspelning i skala i HDInsight
+          href: ../hdinsight-streaming-at-scale-overview.md
+          maintainContext: true
     - name: Utöka kluster
       items:
         - name: Anpassa kluster med Bootstrap
