--- a/articles/hdinsight/kafka/TOC.yml
+++ b/articles/hdinsight/kafka/TOC.yml
@@ -34,7 +34,7 @@
         - name: Kafka och Spark (Structured Streaming)
           href: ../hdinsight-apache-kafka-spark-structured-streaming.md
           maintainContext: true
-        - name: Strukturerad direktuppspelning från Kafka till CosmosDB
+        - name: Strukturerad direktuppspelning från Kafka till Azure Cosmos DB
           href: ../apache-kafka-spark-structured-streaming-cosmosdb.md
           maintainContext: true
         - name: Kafka och Spark (DStream)
