--- a/articles/machine-learning/preview/index.yml
+++ b/articles/machine-learning/preview/index.yml
@@ -13,13 +13,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/06/2017
   ms.author: garye
-  ms.openlocfilehash: c5873c1a9f5a73f700a07fe1050180750bf59cd4
-  ms.sourcegitcommit: 42ee5ea09d9684ed7a71e7974ceb141d525361c9
+  ms.openlocfilehash: 98d106418472f66b8e5fe5d887eb8e75f5ce4a1b
+  ms.sourcegitcommit: 5ac112c0950d406251551d5fd66806dc22a63b01
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 12/09/2017
+  ms.lasthandoff: 01/23/2018
 abstract:
-  description: "Lär dig hur du förbereder data, bygger och distribuerar modeller med våra snabbstarter och självstudier. Med funktionerna för förhandsgranskning i Azure Machine Learning kan du skapa, distribuera och hantera ML- och AI-modeller med alla Python-verktyg och bibliotek. Du kan använda en mängd olika data och beräkna tjänster i Azure för att lagra och bearbeta dina data."
+  description: "Lär dig hur du förbereder data, bygger och distribuerar modeller med våra snabbstarter och självstudier. Med funktionerna för förhandsgranskning i Azure Machine Learning kan du skapa, distribuera och hantera maskininlärnings- och AI-modeller med alla Python-verktyg och bibliotek. Du kan använda en mängd olika data och beräkna tjänster i Azure för att lagra och bearbeta dina data."
 sections:
 - title: "Snabbstarter på 5 minuter"
   items:
