--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -330,6 +330,8 @@
           items:
             - name: MySQL
               href: mysql-install.md
+            - name: MySQL på SUSE
+              href: mysql-on-opensuse.md
             - name: MongoDB
               href: install-mongodb.md
             - name: PostgreSQL
