--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -27,6 +27,24 @@
       href: automation-tutorial-troubleshoot-changes.md
 - name: Gör så här för att
   items:
+    - name: Hantering av uppdateringar
+      items:
+        - name: "Översikt\r\n"
+          href: ../operations-management-suite/oms-solution-update-management.md?toc=%2fazure%2fautomation%2ftoc.json
+        - name: Hantera uppdateringar för flera virtuella datorer
+          href: manage-update-multi.md
+        - name: Integrera SCCM med uppdateringshantering för OMS
+          href: oms-solution-updatemgmt-sccmintegration.md
+    - name: Spårning av ändringar
+      items:
+        - name: "Översikt\r\n"
+          href: ../log-analytics/log-analytics-change-tracking.md?toc=%2fazure%2fautomation%2ftoc.json
+        - name: Spåra ändringar i dina virtuella datorer
+          href: automation-vm-change-tracking.md
+    - name: Inventering
+      items:
+        - name: Hantera en virtuell dator med inventeringssamling
+          href: automation-vm-inventory.md
     - name: Autentisering och säkerhet
       items:
         - name: Skapa fristående Automation-konto
@@ -135,8 +153,10 @@
           href: automation-create-alert-triggered-runbook.md
         - name: Skapa virtuella Amazon Web Service-datorer
           href: automation-scenario-aws-deployment.md
-        - name: Starta/stoppa virtuell dator med JSON-taggar
-          href: automation-scenario-start-stop-vm-wjson-tags.md
+        - name: Åtgärda varning från virtuell Azure-dator
+          href: automation-azure-vm-alert-integration.md
+        - name: Starta/stoppa virtuella datorer utanför arbetstid
+          href: automation-solution-vm-management.md
         - name: Ta bort resursgrupp
           href: automation-scenario-remove-resourcegroup.md
         - name: Källkontrollsintegrering med GitHub Enterprise
@@ -147,22 +167,6 @@
           href: automation-invoke-runbook-from-omsla-alert.md
         - name: Distribuera en Azure Resource Manager-mall i en Azure Automation PowerShell- runbook
           href: automation-deploy-template-runbook.md
-    - name: Lösningar
-      items:
-        - name: Uppdateringshantering
-          href: ../operations-management-suite/oms-solution-update-management.md?toc=%2fazure%2fautomation%2ftoc.json
-        - name: Hantera uppdateringar för flera virtuella datorer
-          href: manage-update-multi.md
-        - name: Integrera SCCM med uppdateringshantering för OMS
-          href: oms-solution-updatemgmt-sccmintegration.md
-        - name: Spårning av ändringar
-          href: ../log-analytics/log-analytics-change-tracking.md?toc=%2fazure%2fautomation%2ftoc.json
-        - name: Spåra ändringar i dina virtuella datorer
-          href: automation-vm-change-tracking.md
-        - name: Hantera en virtuell dator med inventeringssamling
-          href: automation-vm-inventory.md
-        - name: Starta/stoppa virtuella datorer utanför arbetstid
-          href: automation-solution-vm-management.md
     - name: Övervaka
       items:
         - name: Vidarebefordra jobbdata från Azure Automation till Log Analytics
