--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -97,6 +97,8 @@
               href: backup-azure-arm-vms.md
             - name: Säkerhetskopiera krypterade virtuella datorer
               href: backup-azure-vms-encryption.md
+            - name: Aktivera säkerhetskopiering av virtuella datorer när de virtuella datorerna skapas
+              href: backup-during-vm-creation.md
         - name: Hantera och övervaka virtuella datorer
           items:
             - name: Hantera virtuella Azure-säkerhetskopieringar i Azure Portal
