--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Dokumentation om förhandsversionen av Azure Data Factory V2"
+title: Dokumentation om förhandsversionen av Azure Data Factory V2
 metadata:
-  title: "Dokumentation om Azure Data Factory – Självstudier, API-referens | Microsoft Docs"
-  description: "Lär dig hur du använder Data Factory för att konfigurera automatiska datapipelines till och från källor på lokala platser och i molnet, för att flytta och bearbeta data för analys."
+  title: 'Dokumentation om Azure Data Factory – Självstudier, API-referens | Microsoft Docs'
+  description: 'Lär dig hur du använder Data Factory för att konfigurera automatiska datapipelines till och från källor på lokala platser och i molnet, för att flytta och bearbeta data för analys.'
   services: data-factory
   author: spelluru
   manager: jhubbard
@@ -13,78 +13,86 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/08/2017
   ms.author: spelluru
-  ms.openlocfilehash: 293cfbc2cc9030a8315fa48e835a1446ff10d469
-  ms.sourcegitcommit: 5a6e943718a8d2bc5babea3cd624c0557ab67bd5
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 12/01/2017
 abstract:
-  description: "Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines, samt flyttar och omvandlar data för analys. <p>För närvarande finns en förhandsversion av V2 av Data Factory. Versionen V1 är allmänt tillgänglig. Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>"
+  description: 'Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines, samt flyttar och omvandlar data för analys. <p>För närvarande finns en förhandsversion av V2 av Data Factory. Versionen V1 är allmänt tillgänglig. Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>'
+  aside:
+    image:
+      alt: null
+      height: 110
+      src: media/index/video.png
+      width: 250
+    title: 'Skapa pipeliner visuellt för Azure Data Factory V2 (19:31)'
+    href: 'https://azure.microsoft.com/en-us/resources/videos/azure-friday-visually-build-pipelines-for-azure-data-factory-v2'
+    width: 250
 sections:
-- title: "Snabbstarter på 5 minuter"
-  items:
-  - type: paragraph
-    text: "Lär dig hur du skapar en datafabrik med:"
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/data-factory/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/data-factory/quickstart-create-data-factory-powershell
-    - image:
-        src: /azure/data-factory/media/index/logo_net.svg
-      text: .NET
-      href: /azure/data-factory/quickstart-create-data-factory-dot-net
-    - image:
-        src: /azure/data-factory/media/index/logo_python.svg
-      text: Python
-      href: /azure/data-factory/quickstart-create-data-factory-python
-    - image:
-        src: /azure/data-factory/media/index/logo_rest.svg
-      text: REST
-      href: /azure/data-factory/quickstart-create-data-factory-rest-api
-    - image:
-        src: /azure/data-factory/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/data-factory/quickstart-create-data-factory-portal
-    - image:
-        src: /azure/data-factory/media/index/logo_azure_resource_manager.svg
-      text: Resource Manager-mall
-      href: /azure/data-factory/quickstart-create-data-factory-resource-manager-template
-- title: "Steg för steg-självstudier"
-  items:
-  - type: paragraph
-    text: "Lär dig att skapa och övervaka en datafabrik:"
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar en datafabrik med:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/data-factory/media/index/portal.svg
+            text: Data Factory-användargränssnitt
+            href: /azure/data-factory/quickstart-create-data-factory-portal
+          - image:
+              src: /azure/data-factory/media/index/copy-data-tool.png
+            text: Kopiera data-verktyg
+            href: /azure/data-factory/quickstart-create-data-factory-copy-data-tool
+          - image:
+              src: /azure/data-factory/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/data-factory/quickstart-create-data-factory-powershell
+          - image:
+              src: /azure/data-factory/media/index/logo_net.svg
+            text: .NET
+            href: /azure/data-factory/quickstart-create-data-factory-dot-net
+          - image:
+              src: /azure/data-factory/media/index/logo_python.svg
+            text: Python
+            href: /azure/data-factory/quickstart-create-data-factory-python
+          - image:
+              src: /azure/data-factory/media/index/logo_rest.svg
+            text: REST
+            href: /azure/data-factory/quickstart-create-data-factory-rest-api
+          - image:
+              src: /azure/data-factory/media/index/logo_azure_resource_manager.svg
+            text: Resource Manager-mall
+            href: /azure/data-factory/quickstart-create-data-factory-resource-manager-template
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Distribuera SSIS-paket till Azure</a>
-    - html: <a href="/azure/data-factory/tutorial-copy-data-dot-net">Kopiera data i molnet</a>
-    - html: <a href="../data-factory/tutorial-hybrid-copy-powershell">Kopiera lokala data i molnet</a>
-    - html: <a href="../data-factory/tutorial-bulk-copy">Masskopiera data i molnet</a>
-    - html: <a href="../data-factory/tutorial-incremental-copy-powershell">Kopiera data inkrementellt</a>
-    - html: <a href="../data-factory/tutorial-transform-data-spark-powershell">Omvandla data i molnet med Apache Spark</a>
-    - html: "<a href=\"../data-factory/tutorial-transform-data-hive-virtual-network\">Transformera data i virtuellt nätverk</a>"
-    - html: "<a href=\"../data-factory/tutorial-control-flow\">Kontrollflöde</a>"
-- title: Exempel
-  items:
-  - type: paragraph
-    text: "Använd följande exempel för att arbeta med Data Factory"
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig att skapa och övervaka en datafabrik:'
+      - type: list
+        style: ordered
+        items:
+          - html: Distribuera SSIS-paket till Azure – <a href="/azure/data-factory/tutorial-create-azure-ssis-runtime-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure PowerShell</a>
+          - html: Kopiera data i molnet – <a href="/azure/data-factory/tutorial-copy-data-tool">verktyget för att kopiera data</a> | <a href="/azure/data-factory/tutorial-copy-data-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-copy-data-dot-net">Azure PowerShell</a>
+          - html: Kopiera lokala data till molnet – <a href="/azure/data-factory/tutorial-hybrid-copy-data-tool">verktyget för att kopiera data | <a href="/azure/data-factory/tutorial-hybrid-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-hybrid-copy-powershell">Azure PowerShell</a>
+          - html: Masskopiera data – <a href="/azure/data-factory/tutorial-bulk-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-bulk-copy">Azure PowerShell</a>
+          - html: Kopiera data inkrementellt – <a href="/azure/data-factory/tutorial-incremental-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-incremental-copy-powershell">Azure PowerShell</a>
+          - html: Omvandla data i molnet med Spark – <a href="/azure/data-factory/tutorial-transform-data-spark-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-spark-powershell">Azure PowerShell</a>
+          - html: Omvandla data i ett virtuellt nätverk – <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network">Azure PowerShell</a>
+          - html: Kontrollera flödet – <a href="/azure/data-factory/tutorial-control-flow-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-control-flow">Azure PowerShell</a>
+  - title: Exempel
     items:
-    - html: <a href="/azure/data-factory/samples-powershell">PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Använd följande exempel för att arbeta med Data Factory
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/data-factory/samples-powershell">PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.datafactoryv2/">Azure PowerShell</a></p>
-    - title: "Språk"
-      html: <p><a href="/dotnet/api/microsoft.azure.management.datafactory">.NET</a></p><p><a href="/python/api/overview/azure/datafactory?view=azure-python">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/datafactory">REST API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/module/azurerm.datafactoryv2/">Azure PowerShell</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api/microsoft.azure.management.datafactory">.NET</a></p><p><a href="/python/api/overview/azure/datafactory?view=azure-python">Python</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/datafactory">REST API</a></p>
