--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -1,6 +1,7 @@
 - name: Event Grid
   href: index.yml
-- name: Översikt
+- name: |
+    Översikt
   items:
     - name: Om Event Grid
       href: overview.md
@@ -10,6 +11,8 @@
   items:
     - name: Dirigera Blob Storage-händelser – Azure CLI
       href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Dirigera Blob Storage-händelser – Azure PowerShell
+      href: ../storage/blobs/storage-blob-event-quickstart-powershell.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: Skapa anpassad händelse – Azure CLI
       href: custom-event-quickstart.md
     - name: Skapa anpassad händelse – Azure PowerShell
@@ -36,6 +39,10 @@
   items:
     - name: Strömma data från Event Hubs till informationslager
       href: event-grid-event-hubs-integration.md
+    - name: Skicka meddelanden om IoT Hub-händelser
+      href: publish-iot-hub-events-to-logic-apps.md
+    - name: Skicka till anpassat ämne
+      href: post-to-custom-topic.md
     - name: Mallar för händelseprenumerationer
       href: event-subscription-template.md
     - name: Övervaka händelseleverans
@@ -48,6 +55,8 @@
       href: /powershell/module/azurerm.eventgrid
     - name: REST
       href: /rest/api/eventgrid
+    - name: 'SDK:er'
+      href: sdk-overview.md
     - name: Prenumerationsschema
       href: subscription-creation-schema.md
     - name: Händelseschema
@@ -59,6 +68,8 @@
           href: event-schema-blob-storage.md
         - name: Händelsehubbar
           href: event-schema-event-hubs.md
+        - name: IoT Hub
+          href: event-schema-iot-hub.md
         - name: Resursgrupper
           href: event-schema-resource-groups.md
 - name: Resurser
