--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -2,7 +2,8 @@
   href: /azure/hdinsight
 - name: Spark på HDInsight
   items:
-    - name: "Översikt\r\n"
+    - name: |
+        Översikt
       href: apache-spark-overview.md
     - name: Hadoop-komponenter på HDInsight
       href: ../hdinsight-component-versioning.md
@@ -84,10 +85,15 @@
       items:
         - name: Använda med Data Lake Store
           href: apache-spark-use-with-data-lake-store.md
+        - name: Ansluta till Azure SQL-databas
+          href: apache-spark-connect-to-sql-database.md
     - name: Spark-strömning
       items:
-        - name: "Översikt\r\n"
+        - name: |
+            Översikt
           href: apache-spark-streaming-overview.md
+        - name: Skapa Spark-direktuppspelningsjobb med hög tillgänglighet i YARN
+          href: apache-spark-streaming-high-availability.md
         - name: Bearbeta strömningshändelser
           href: apache-spark-eventhub-streaming.md
         - name: Strukturerad direktuppspelning med Event Hubs
@@ -101,6 +107,8 @@
         - name: Spark-strömning (DStream) med Kafka
           href: ../hdinsight-apache-spark-with-kafka.md
           maintainContext: true
+        - name: Skapa Spark-direktuppspelningsjobb med händelsebearbetning exakt en gång
+          href: apache-spark-streaming-exactly-once.md
     - name: Spark och Machine Learning
       items:
         - name: Förutsäga HVAC-prestanda
@@ -198,6 +206,8 @@
           maintainContext: true
     - name: Hantera
       items:
+        - name: Konfigurera Spark-inställningar
+          href: apache-spark-settings.md
         - name: Optimera Spark-jobb
           href: apache-spark-perf.md
         - name: Kapacitetsplanering för kluster
@@ -345,7 +355,8 @@
   items:
     - name: Företagssäkerhet
       items:
-        - name: "Översikt\r\n"
+        - name: |
+            Översikt
           href: ../domain-joined/apache-domain-joined-introduction.md
           maintainContext: true
         - name: Planera för företagssäkerhet
