--- a/articles/monitoring-and-diagnostics/toc.yml
+++ b/articles/monitoring-and-diagnostics/toc.yml
@@ -1,9 +1,10 @@
 - name: Dokumentation om Azure Monitor
   href: index.yml
-- name: Översikt
+- name: |
+    Översikt
   items:
-    - name: Azure Monitor
-      href: monitoring-overview-azure-monitor.md
+    - name: Övervakning i Azure
+      href: monitoring-overview.md
 - name: Snabbstarter
   expanded: true
   items:
@@ -17,7 +18,7 @@
       href: monitor-tutorial-autoscale-performance-schedule.md
     - name: Arkivera övervakningsdata
       href: monitor-tutorial-archive-monitoring-data.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: Källor för övervakningsdata
       href: monitoring-data-sources.md
@@ -27,8 +28,8 @@
       href: monitoring-partners.md
     - name: Ytterligare översikter
       items:
-        - name: Övervakningsverktyg i Azure
-          href: monitoring-overview.md
+        - name: Azure Monitor
+          href: monitoring-overview-azure-monitor.md
         - name: Mått
           href: monitoring-overview-metrics.md
         - name: Aviseringar
@@ -100,7 +101,7 @@
           href: monitoring-autoscale-common-scale-patterns.md
         - name: Skala automatiskt med anpassat mått
           href: monitoring-autoscale-scale-by-custom-metric.md
-        - name: Skala skalningsuppsättningar för virtuella datorer automatiskt med Resource Manager-mallar
+        - name: VM Scale Sets för automatisk skalning med Resource Manager-mallar
           href: insights-advanced-autoscale-virtual-machine-scale-sets.md
         - name: Skala datorer i en skalningsuppsättning för virtuella datorer automatiskt
           href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=%2fazure%2fmonitoring-and-diagnostics%2ftoc.json
