--- a/articles/logic-apps/TOC.yml
+++ b/articles/logic-apps/TOC.yml
@@ -1,7 +1,6 @@
 - name: Dokumentation om Azure Logic Apps
   href: index.yml
-- name: |
-    Översikt
+- name: Översikt
   items:
     - name: Vad är Azure Logic Apps?
       href: logic-apps-overview.md
@@ -143,10 +142,14 @@
           href: logic-apps-enterprise-integration-as2.md
         - name: Azure Blob Storage
           href: ../connectors/connectors-create-api-azureblobstorage.md
+        - name: Azure Event Hubs
+          href: ../connectors/connectors-create-api-azure-event-hubs.md
         - name: Azure Functions
           href: logic-apps-azure-functions.md
         - name: Azure Logic Apps
           href: logic-apps-http-endpoint.md
+        - name: Azure Service Bus
+          href: ../connectors/connectors-create-api-servicebus.md
         - name: Azure SQL Database
           href: ../connectors/connectors-create-api-sqlazure.md
         - name: 'Anpassa API:er och webbappar'
@@ -157,8 +160,6 @@
           href: ../connectors/connectors-create-api-crmonline.md
         - name: EDIFACT
           href: logic-apps-enterprise-integration-edifact.md
-        - name: Händelsehubbar
-          href: ../connectors/connectors-create-api-azure-event-hubs.md
         - name: Filsystem
           href: logic-apps-using-file-connector.md
         - name: Flat fil
@@ -189,8 +190,6 @@
           href: logic-apps-using-sap-connector.md
         - name: Schema
           href: ../connectors/connectors-native-recurrence.md
-        - name: Azure Service Bus
-          href: ../connectors/connectors-create-api-servicebus.md
         - name: sharepoint online
           href: ../connectors/connectors-create-api-sharepointonline.md
         - name: SharePoint Server
