--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -1,6 +1,6 @@
 - name: Azure Container Registry
   href: ./index.yml
-- name: "Översikt\r\n"
+- name: Översikt
   items:
     - name: Om Container Registry
       href: container-registry-intro.md
@@ -69,6 +69,8 @@
       href: /dotnet/api/overview/azure/containerregistry
     - name: Python
       href: /python/api/overview/azure/container-registry
+    - name: Java
+      href: /java/api/overview/azure/containerregistry
     - name: Node.js
       href: /javascript/api/overview/azure/container-registry
     - name: Resource Manager-mall
