--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -1,7 +1,6 @@
 - name: Dokumentation om Azure IoT Hub Device Provisioning-tjänsten
   href: index.yml
-- name: |
-    Översikt
+- name: Översikt
   items:
     - name: Om IoT Device Provisioning
       href: about-iot-dps.md
@@ -32,6 +31,8 @@
               href: quick-create-simulated-device-x509-csharp.md
             - name: Python
               href: quick-create-simulated-device-x509-python.md
+            - name: Node.js
+              href: quick-create-simulated-device-x509-node.md
     - name: Registrera enhet
       items:
         - name: TPM
@@ -42,6 +43,8 @@
               href: quick-enroll-device-tpm-csharp.md
             - name: Node.js
               href: quick-enroll-device-tpm-node.md
+            - name: Python
+              href: quick-enroll-device-tpm-python.md
         - name: X.509
           items:
             - name: Java
@@ -50,6 +53,8 @@
               href: quick-enroll-device-x509-csharp.md
             - name: Node.js
               href: quick-enroll-device-x509-node.md
+            - name: Python
+              href: quick-enroll-device-x509-python.md
 - name: Självstudier
   items:
     - name: 1 – Konfigurera molnresurser
